methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:22: error: ';' expected but ')' found.
    faireMotif());faireMotif();faireMotif()
                ^